--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "jsonserver",
+  "name": "json-server-api",
   "version": "1.0.0",
-  "description": "Fake REST API for testing",
-  "main": "index.js",
-  "license": "MIT",
-  "dependencies": {
-    "json-server": "^0.17.0"
+  "description": "Simple Fake API",
+  "main": "main.js",
+  "scripts": {
+    "start": "json-server --watch ./db.json",
+    "start-auth": "node server.js"
   },
-  "scripts" : {
-    "json:server": "json-server --watch db.json",
-    "json:server:remote": "json-server http://jsonplaceholder.typicode.com/db"
+  "author": "ME:)",
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "json-server": "^0.14.2",
+    "jsonwebtoken": "^8.1.0"
   }
 }
